--- a/myworld/feeds/templates/post.html
+++ b/myworld/feeds/templates/post.html
@@ -23,15 +23,12 @@
 
     <hr>
     <h1>Recents Posts</h1>
-    <table border="1">
-        {% for x in allposts %}
-        <tr>
-            <td>{{ x.post }}</td>
-            <td>{{ x.name }}</td>
-            <td>{{ x.time }}</td>
-        </tr>
-        {% endfor %}
-    </table>
+    
+    {% for x in allposts %}
+    <p>{{ x.post }}</p>
+    <p><i>posted by {{ x.name }} at {{ x.time }}</i></p>
+    {% endfor %}
+    
 
     
 </body>
